--- a/2022-1/apunte/main.tex
+++ b/2022-1/apunte/main.tex
@@ -132,9 +132,8 @@
 %%%=======================
 %%%=======================
 %%% CAP3 =================
-%    \input{Cap.03.tex}
+    \input{Cap.03.tex}
 %    \input{Cap.03_alternativo_1.tex}
-    \input{Cap.03_alternativo_2.tex}
 %%%=======================
 %%%=======================
 %%% CAP4 =================
